changes to make it run from scratch

--- a/Hyper_opt.ipynb
+++ b/Hyper_opt.ipynb
@@ -31,6 +31,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting scikit-optimize\n",
+      "  Using cached https://files.pythonhosted.org/packages/f4/44/60f82c97d1caa98752c7da2c1681cab5c7a390a0fdd3a55fac672b321cac/scikit_optimize-0.5.2-py2.py3-none-any.whl\n",
+      "Requirement already satisfied: scipy>=0.14.0 in /home/ubuntu/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from scikit-optimize) (1.1.0)\n",
+      "Requirement already satisfied: numpy in /home/ubuntu/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from scikit-optimize) (1.14.5)\n",
+      "Requirement already satisfied: scikit-learn>=0.19.1 in /home/ubuntu/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from scikit-optimize) (0.19.1)\n",
+      "Installing collected packages: scikit-optimize\n",
+      "Successfully installed scikit-optimize-0.5.2\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 18.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install scikit-optimize\n",
+    "!pip install imgaug\n",
+    "!pip install opencv-python\n",
+    "!pip install tensorboardX"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -201,9 +229,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Environment (conda_pytorch_p36)",
    "language": "python",
-   "name": "python3"
+   "name": "conda_pytorch_p36"
   },
   "language_info": {
    "codemirror_mode": {
